--- a/index.css
+++ b/index.css
@@ -2,3 +2,123 @@ html, body {
     margin: 0;
     padding: 0;
 }
+
+body {
+    display: grid;
+    grid-template-rows: auto 1em auto 1fr;
+    grid-template-columns: 1fr;
+    width: 100vw;
+    height: 100vh;
+}
+
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./img/header-bg.jpg");
+    background-size: cover;
+    background-position: 0 60%;
+    background-color: black;
+    color: whitesmoke;
+    mix-blend-mode: difference;
+    text-shadow: 1px 1px #2E2E2F;
+    z-index: 0;
+    grid-row: 1 / 3;
+    grid-column: 1;
+}
+
+.top-header {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    gap: 1em;
+    justify-content: space-between;
+    padding: 3em 2em;
+}
+
+.search {
+    width: 80vw;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    border: 2px solid grey;
+    border-radius: 5px;
+    grid-row: 2 / 4;
+    z-index: 1;
+    grid-column: 1;
+}
+
+.search input[type="text"] {
+    background-color: #2E2E2F;
+    border: none;
+    margin: 0;
+}
+
+.search button {
+    border: none;
+    padding: 0.5em 2em;
+}
+
+main {
+    background-color: #121212;
+    color: #2E2E2F;
+    grid-row: 3 / 5;
+    grid-column: 1;
+}
+
+/* typography */
+
+body {
+    font-family: "Inter", Helvetica, sans-serif;
+}
+
+header h1,
+header h4 {
+    margin: 0;
+}
+
+header h1,
+header h4,
+main p {
+    font-weight: 800;
+}
+
+header h1 {
+    font-size: 2rem;
+}
+
+header h4 {
+    font-size: 1rem;
+}
+
+header a {
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+h1 h2 h3 h4 {
+    margin: 0;
+}
+
+i {
+    font-size: 5rem;
+}
+
+main p {
+    font-size: 1.125rem;
+}
+
+/* media */
+
+@media (min-width: 500px) {
+    header h1 {
+        font-size: 2.6875rem;
+    }
+
+    header h4 {
+        font-size: 1.25rem;
+    }
+
+    .top-header {
+        padding: 5em 3em;
+        flex-direction: row;
+        align-items: center;
+    }
+}
