--- a/index.css
+++ b/index.css
@@ -88,6 +88,8 @@ main {
     color: #2E2E2F;
     grid-row: 3 / 5;
     grid-column: 1;
+    padding-top: 2em;
+    overflow: scroll;
 }
 
 .blank, #empty {
@@ -100,6 +102,7 @@ main {
 #results {
     width: 80vw;
     margin: 0 auto;
+    display: none;
 }
 
 #seemore {
@@ -107,26 +110,64 @@ main {
     color: grey;
 }
 
+/* movie divs */
+
 .movie {
-    display: flex;
-    align-items: center;
     border-bottom: 1px solid grey;
     color: whitesmoke;
     gap: 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    padding: 1em 0;
 }
 
-.movie i {
-    font-size: 1em;
+.infodiv {
+    grid-column: 2 / 6;
+    /* display: grid;
+    grid-template-rows: auto auto 1fr; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 0.75rem;
+}
+
+.infodiv p {
+    margin: 0.25em;
+}
+
+.posterdiv {
+    grid-column: 1 / 2;
 }
 
 .poster {
-    height: 20vh;
+    height: 21vh;
+}
+
+#title {
+    font-size: 1.5em;
+}
+
+.star {
+    margin-top: 1px;
+    color: #FEC654;
+}
+
+.description,
+#no-results {
+    color: grey;
+}
+
+#no-results {
+    display: none;
 }
 
 /* utility */
 
-.flexcenter {
+.flex {
     display: flex;
+}
+
+.center {
     align-items: center;
 }
 
@@ -147,7 +188,8 @@ header h4 {
 
 header h1,
 header h4,
-#empty p {
+#empty p,
+#no-results p {
     font-weight: 800;
 }
 
@@ -172,7 +214,13 @@ main i {
     font-size: 5rem;
 }
 
-main p {
+.movie i {
+    font-size: 1em;
+}
+
+#seemore p,
+#empty p,
+#no-results p {
     font-size: 1.125rem;
 }
 
@@ -191,5 +239,15 @@ main p {
         padding: 5em 3em;
         flex-direction: row;
         align-items: flex-end;
+    }
+
+    .secondaryinfo {
+        display: flex;
+        align-items: center;
+        gap: 1em;
+    }
+
+    .infodiv {
+        font-size: 0.9rem;
     }
 }
