add failsafe poster when 404 request

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
 /* header */
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./img/header-bg.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./img/header-bg.webp");
     background-size: cover;
     background-position: 0 60%;
     background-color: black;
